--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                                     Alguien (esperemos
                                     que tú) nos ha solicitado restablecer la contraseña de tu cuenta.
                                     Haz clic en el
-                                    siguiente botón, en el intervalo de una hora, para hacerlo. Si no solicitaste
+                                    siguiente botón, en el intervalo de una hora, para hacerlo. Si no solicitó
                                     restablecer la
                                     contraseña, puede ignorar este mensaje. No responda a este mail, fue enviado desde
                                     una dirección de
-                                    correo no gestionada. Si tiene alguna consulta, por favor contacte con nuestro
+                                    correo no gestionada. Si tiene alguna consulta, por favor contáctese con nuestro
                                     <a style="color: #121212;" class="mailto" href="mailto:info@agsistemas.net.ar">Soporte Técnico</a>.
                                 </p>
 
