--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         .wrapper {width: 100%;table-layout: fixed;background-color: #f9f9f9;padding-bottom: 60px;}
         .main {background-color: #FFF;margin: 0 auto;width: 100%;max-width: 800px;border-spacing: 0;font-family: sans-serif;color: #121212;}
         .header {width: 100px; max-width: 100%;height: 150px; border-bottom: 1px solid #999;}
-        .button {background-color: #121212;text-decoration: none;padding: 12px 20px;border-radius: 20px;font-weight: 500;}
+        .button {background-color: #121212; color: #FFF !important;text-decoration: none;padding: 12px 20px;border-radius: 20px;font-weight: 500;}
         .button:hover {background-color: #FFF;border: 1px solid #121212;color: #121212;text-decoration: none;}
         .logo__footer { display: block;padding: 20px;}
     </style>
@@ -57,11 +57,11 @@
                                     restablecer la
                                     contraseña, puede ignorar este mensaje. No responda a este mail, fue enviado desde
                                     una dirección de
-                                    correo no gestionada. Si tiene alguna consulta, por favor contáctese con nuestro
+                                    correo no gestionada. Si tiene alguna consulta, por favor contáctese con nuestro [info@agsistemas.net.ar]
                                     <a style="color: #121212;" class="mailto" href="mailto:info@agsistemas.net.ar">Soporte Técnico</a>.
                                 </p>
 
-                                <a style="color: #FFF" href="<%= url %>" target="_blank" rel="noopener noreferrer" class="button">Restablece tu contraseña</a>
+                                <a class="button" style="color: #FFF;" href="<%= url %>" target="_blank" rel="noopener noreferrer">Restablece tu contraseña</a>
    
                                 <p style="line-height:18px; font-size: 13px; padding: 25px 100px 0; color: #999;">O haz
                                     clic en este enlace: <a style="color: #999;" href="<%= url %>" target="_blank"
