--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         .button {background-color: #121212; color: #FFF !important;text-decoration: none;padding: 12px 20px;border-radius: 20px;font-weight: 500;}
         .button:hover {background-color: #FFF;border: 1px solid #121212;color: #121212;text-decoration: none;}
         .logo__footer { display: block;padding: 20px;}
+        .li a[href]{color:#121212 !important;}
     </style>
 
 </head>
